[gd_scene load_steps=2 format=3 uid="uid://c2od0cvxcsuwc"]

[ext_resource type="Script" path="res://main_menu/level_button.gd" id="1_fkorm"]

[node name="LevelButton" type="TextureRect"]
custom_minimum_size = Vector2(640, 192)
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1
stretch_mode = 6
script = ExtResource("1_fkorm")

[node name="ButtonPlay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -33.0
offset_right = -16.0
offset_bottom = 33.0
grow_horizontal = 0
grow_vertical = 2
text = "Play"

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 97.0
offset_bottom = 74.0
text = "Title"

[connection signal="pressed" from="ButtonPlay" to="." method="_on_button_play_pressed"]
